--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "counter",
+  "homepage": "https://annavilnid.github.io/counter",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,6 +14,7 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-redux": "^7.1.24",
     "@types/redux": "^3.6.0",
+    "gh-pages": "^4.0.0",
     "lodash": "^4.17.21",
     "lodash.throttle": "^4.1.1",
     "react": "^18.2.0",
@@ -25,6 +27,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
